--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Contact Me</title>
-    <!--<link rel="stylesheet" href="css/contact.css"> -->
-    <!--<<script type="text/javascript" src="js/contact.js"></script>
+    <link rel="stylesheet" href="css/contact.css">
+    <script type="text/javascript" src="js/contact.js"></script>
   </head>
   <!-- needs to have name, email, message, and option for phone number
   If phone number is selected it needs to have spot for phone number, time zone, and best time to contact-->
@@ -12,25 +12,42 @@
   	<form>
   		<label> Name </label>
   		<input name="name" placeholder="Your Name">
-  		<span class="hint" id="nameHint">Please write your name</span> 
+  		<span class="hint" id="nameHint">Please write your name</span> <br>
 
   		<label>Email</label>
-    	<input name="email" type="email" placeholder="Your Email Address">
-    	<span class="hint" id="emailHint">Please include a valid email</span> 
+    	<input name="emailTextBox" id="emailTextBox" type="email" placeholder="Your Email Address">
+    	<span class="hint" id="emailHint">Please include a valid email</span><br> 
+    	<span> What is the general purpose of the comment </span>
+    	<select name ="selectPurpose";>
+    		<option> Schedule an appointment</option>
+    		<option> Ask a question about services</option>
+    		<option> Inquire about partnership</option>
+    		<option> Make a comment</option>
+    		<option> Other</option>
+    	</select>
+    	<br>
 
     	 <input type="checkbox" id="phonePreferred" name="phonePreferred" value="Yes"> I prefer to be contacted by phone<br>
-
-    	  <input size="16" placeholder="Phone Number" id="phone" name="phone"
-            type="text"> <p id="phoneHint" class="hint">The phone number is not a valid format.  Please write it as xxx-xxx-xxxx</p><br>
-          <br>
-            <div id="selectTimeZone" style="float:left;margin-right:15px;"> What time zone are you in<br>
-              <select name="timeZone" id="timeZone">
-              <option>----</option>
-              </select>
-            </div>
+    	 <div id="phoneForms">
+    	 	<br>
+    	 	<label> Phone</label>
+    	  	<input size="16" placeholder="Phone Number" id="phone" name="phone" type="text"> 
+    	  	<p id="phoneHint" class="hint">The phone number is not a valid format. 
+    	  	 Please write it as xxx-xxx-xxxx</p>
+            	<label> Best time to contact you </label>
+        	<textarea name="contactTime"></textarea>
+        	<br>
+            	<div id="selectTimeZone" style="float:left;margin-right:15px;"> What time zone are you in?
+              		<select name="timeZone" id="timeZone">
+              		</select>
+            	</div>
+        	<br>
+        	<br>
+        </div>
     	<label>Message</label>
+    	<br>
     	<textarea name="message" placeholder="Type Here"></textarea>
-            
-    	<input id="submit" name="submit" type="submit" value="Submit">
+        <br>
+        <button class="button" type="submit" id="submitBtn" name="submit">Send Message</button><br>    
         
 </form>
